--- a/source/app/components/wi-crossplot/template/wi-crossplot.html
+++ b/source/app/components/wi-crossplot/template/wi-crossplot.html
@@ -1,4 +1,4 @@
-<div class="crossplot-toolbar-wrapper">
+<div ng-if="wiCrossplot.showToolbar" class="crossplot-toolbar-wrapper">
     @@include('./toolbar/index.html')
 </div>
 <div class="crossplot-main-content" style="flex: 1; display: flex; flex-direction: row;">
