--- a/source/app/components/wi-histogram/template/wi-histogram.html
+++ b/source/app/components/wi-histogram/template/wi-histogram.html
@@ -1,4 +1,4 @@
-<div class="histogram-toolbar-wrapper">
+<div ng-if="wiHistogram.showToolbar" class="histogram-toolbar-wrapper">
     @@include('./toolbar/index.html')
 </div>
 <div class="histogram-main-content" style="flex: 1; display: flex; flex-direction: row;">
