--- a/source/app/components/wi-comboview/template/wi-comboview.html
+++ b/source/app/components/wi-comboview/template/wi-comboview.html
@@ -1,8 +1,8 @@
-<!-- <div class="comboview-toolbar-wrapper">
+<div class="comboview-toolbar-wrapper">
     @@include('./toolbar/index.html')
 </div>
 <div class="comboview-main-content" style="flex: 1; display: flex; flex-direction: row;">
     <wi-d3-comboview style="width: 100%; flex: 1; display: flex;"
     name='{{wiComboview.wiD3AreaName}}'
     wi-comboview-ctrl='wiComboview'></wi-d3-comboview>
-</div> -->
+</div>
