--- a/source/app/components/wi-comboview/wi-comboview.less
+++ b/source/app/components/wi-comboview/wi-comboview.less
@@ -22,14 +22,14 @@ wi-comboview {
 
   .comboview-main-content {
       padding: 2px;
-      flex: 1;
+      //flex: 1;
+      height: calc(~"100% - 33px");
       display: flex;
       flex-direction: row;
 
       wi-d3-comboview {
           background-color: #fff;
           margin: 2px;
-          padding: 4px;
           width: 100%;
           width: 100%;
           flex: 1;
