--- a/source/components/wi-list/wi-list.html
+++ b/source/components/wi-list/wi-list.html
@@ -14,7 +14,7 @@
             <input class="width-95-percent" ng-if="item.type == 'checkbox'" type="checkbox" ng-model="item.value" ng-disabled="!item.editable" ng-change="wiList.onChange(item)">
             <select class="width-95-percent" ng-if="item.type == 'select'" ng-model="item.value"
                     ng-disabled="!item.editable" ng-change="wiList.onChange(item)">
-                <option value="undefined">---------</option>
+                <option value="{{undefined}}">&nbsp;</option>
                 <option ng-repeat="option in item.options" ng-value="option.value">{{option.label}}</option>
             </select>
         </td>
