--- a/source/app/components/wi-logplot/template/wi-logplot.html
+++ b/source/app/components/wi-logplot/template/wi-logplot.html
@@ -6,6 +6,7 @@
     <div class='slidingbar'>
         <wi-slidingbar
             name="{{wiLogplot.slidingbarName}}"
+            container-name="{{wiLogplot.containerName}}"
             ng-init="wiLogplot.getSlidingbarCtrl()">
         </wi-slidingbar>
     </div>
