--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -63,7 +63,7 @@ img {
 		color: blue;
 	}
 }
-.modal-footer button {
+.modal-footer button,.modal-footer label{
 	padding: 4px 10px 4px 8px;
 	background: rgba(255,255,255,1);
 	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(222,224,230,1) 49%, rgba(255,255,255,1) 100%);
