add keydown to wi-curve-listing

--- a/source/app/components/wi-curve-listing/wi-curve-listing.html
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.html
@@ -60,7 +60,7 @@
 					<div class="tcol">
 						<input type="number" class='form-control wi-form-control editor' 
 						ng-model="wiCurveListing.depthInput" placeholder="Go to ..."
-						wi-enter='wiCurveListing.goToDepth()' min="0">
+						wi-enter='wiCurveListing.goToDepth()' min="0" id="depthInput">
 					</div>
 				</div>
 			</div>
