fix slider and resize combined plot

--- a/source/app/components/wi-d3-comboview/wi-d3-comboview.html
+++ b/source/app/components/wi-d3-comboview/wi-d3-comboview.html
@@ -1,19 +1,8 @@
-<div wi-right-click="wiD3Comboview.showContextMenu($event)" wi-element-ready="wiD3Comboview.onReady()" id="test-comboview">
-	<div id="{{wiD3Comboview.comboviewAreaId}}" class="layoutContainer">
-	
-	</div>
-</div>
+<div wi-right-click="wiD3Comboview.showContextMenu($event)" wi-element-ready="wiD3Comboview.onReady()" id="{{wiD3Comboview.comboviewAreaId}}" class="layoutContainer"></div>
 <style>
-	#test-comboview {
-		height: 100%;
-	  	position: relative;
-	  	width: 100%;
-	  	overflow: hidden;
-	}
 	.layoutContainer {
 		width: 100%;
   		height: 100%;
-  		position:absolute;
   		top: 0;
 	}
 </style>
