lower track header height

--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -9,6 +9,7 @@ wi-d3 {
         flex-direction:row;
         position: relative;
         //width: 100%;
+        height: 100%;
         flex: 1;
         //padding-left: 3px;
         .d3-region-svg {
