add current view, display view to depth track

--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -43,5 +43,8 @@ wi-d3 {
     .vi-track-vertical-resizer {
         margin-left: -3px;
         //border: 1px solid blue;
+        &:hover {
+            background: #e1e1e1;
+        }
     }
 }
