--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -44,4 +44,7 @@ wi-d3 {
         margin-left: -3px;
         //border: 1px solid blue;
     }
+    .wi-d3-track-component {
+        .vi-track-container
+    }
 }
