--- a/source/app/components/wi-condition-node/wi-condition-node.html
+++ b/source/app/components/wi-condition-node/wi-condition-node.html
@@ -7,7 +7,7 @@
             <ui-select ng-model='wiConditionNode.item.left.value' ng-change="wiConditionNode.update()">
                 <ui-select-match placeholder='Select a curve'>{{$select.selected.properties.name}}</ui-select-match>
                 <ui-select-choices group-by="'datasetName'"
-                repeat='curve.id as curve in wiConditionNode.curveOptions | filter:{name:$select.search} track by curve.id'>
+                repeat='curve.id as curve in wiConditionNode.curveOptionsWithDepth | filter:{name:$select.search} track by curve.id'>
                 <div class="padding-left-20px">{{curve.properties.name}}</div>
             </ui-select-choices>
             </ui-select>
@@ -19,7 +19,7 @@
         </div>
         <div class='col-xs-5'>
             <wi-multi-input ng-model='wiConditionNode.item.right' model='wiConditionNode.item.right' curves-list='wiConditionNode.curveOptions'
-            ng-change='wiConditionNode.update()'></wi-multi-input>
+            ng-change='wiConditionNode.update()' value-only='wiConditionNode.item.left.value'></wi-multi-input>
         </div>
     </div>
     <div ng-if="!wiConditionNode.isNull() && wiConditionNode.item.children" class='condition-node' 
