--- a/source/less/main.less
+++ b/source/less/main.less
@@ -523,3 +523,13 @@ div.noUi-base {
 	}
 
 }
+.stack-header-control{
+    i{
+        font-size: 16px;
+        cursor: pointer;
+        display: none;
+    }
+    >:first-child{
+        margin-right: 3px;
+    }
+}
