--- a/source/less/main.less
+++ b/source/less/main.less
@@ -450,6 +450,9 @@ input[type].display-none, .display-none {
 .text-color-lightgray {
     color: slategray;
 }
+.text-color-red {
+    color: red;
+}
 .user-wrapper{
     position: absolute;
     //top: 15px;
