--- a/source/components/wi-stages/wi-stage.html
+++ b/source/components/wi-stages/wi-stage.html
@@ -1,1 +1,4 @@
-<div style='display:flex;flex:1;z-index:{{wiStage.active?10:0}};' ng-show="wiStage.active" ng-transclude></div>
+<h4 ng-if="wiStage.active" style='text-align:center;'>{{wiStage.label}}</h4>
+<div style='display:flex;flex:1;z-index:{{wiStage.active?10:0}};' 
+    ng-if="wiStage.active" ng-transclude>
+</div>
