separate wipm template

--- a/source/less/wipm.less
+++ b/source/less/wipm.less
@@ -16,10 +16,17 @@
 	margin-left: 10px;
 	margin-right: 10px;
 }
+
 #left li{
 	list-style: none;
-	padding: 15px;
+	padding: 5px;
 	border-bottom: 0.5px solid #a8aab4;
+}
+.nav-pilss, .nav-pills>li {
+	float: none;
+}
+.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
+    background-color: #cccccc;
 }
 #left a{
     font-size: 16px;
