--- a/source/less/simpleLayout.less
+++ b/source/less/simpleLayout.less
@@ -2,3 +2,11 @@ div.lm_content {
     background-color: white;
     border: none;
 }
+.content-heading {
+    text-align: center;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 97%;
+}
