--- a/source/app/components/wi-explorer/template/wi-explorer.html
+++ b/source/app/components/wi-explorer/template/wi-explorer.html
@@ -2,7 +2,7 @@
 
 <div class="filter-block">
     <span>Filter: </span>
-    <input type="text" placeholder="Search ...">
+    <input type="text" placeholder="Search ..." ng-model="filter">
 </div>
 
 <div class="label_treeview">
@@ -10,7 +10,7 @@
 </div>
 <div style='background-color:#fff; overflow-y: auto; height: calc(100% - 94px);'
 id="treeContent">
-    <wi-explorer-treeview name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-explorer-treeview>
+    <wi-explorer-treeview name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer" filter-by='{{filter}}'></wi-explorer-treeview>
     <!-- <wi-treeview name="wiExplorer.treeviewName" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview> -->
     <!-- <wi-treeview contextmenuholder="{{wiExplorer.name}}" name="{{wiExplorer.treeviewName}}" config="wiExplorer.treeConfig" container="wiExplorer"></wi-treeview> -->
 </div>
