--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -61,14 +61,14 @@ wi-curve-listing{
         .fix-column > .thead > .trow{
             >:first-child{
                 width: 90px;
-                input[type=number]::-webkit-inner-spin-button, 
-                input[type=number]::-webkit-outer-spin-button { 
-                    -webkit-appearance: none;
-                    -moz-appearance: none;
-                    appearance: none;
-                    margin: 0; 
-                }
             }
+        }
+        input[type=number]::-webkit-inner-spin-button, 
+        input[type=number]::-webkit-outer-spin-button { 
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            margin: 0; 
         }
         .fix-column > .tbody > .trow{
             margin-top: -10px;
@@ -104,6 +104,17 @@ wi-curve-listing{
         .rest-columns > .thead > .trow > :first-child{
             margin-left: 0;
         }
+        .rest-columns > .tbody > .trow > .tcol{
+            &:hover{
+                background: cornsilk;
+                input, input:focus{
+                    background: cornsilk;
+                }
+            }
+            input:focus{
+                background: cornsilk;
+            }
+        }
         .tcol{
             display: inline-block;
             width: 110px;
@@ -115,6 +126,9 @@ wi-curve-listing{
     }
     .nanValue{
         background: steelblue;
+        input{
+            background: steelblue;
+        }
     }
     .editor{
         border-width: 0;
