--- a/source/less/wipm.less
+++ b/source/less/wipm.less
@@ -9,7 +9,8 @@
 	margin: 0px;
 }
 #left{
-	background: linear-gradient(to top, #ffffff 13%, #fafafc 42%, #f0f1f5 100%);
+	border: 1px solid #ccc;
+	// background: linear-gradient(to top, #ffffff 13%, #fafafc 42%, #f0f1f5 100%);
 }
 #left ul{
 	padding: 0px;
