--- a/source/less/simpleLayout.less
+++ b/source/less/simpleLayout.less
@@ -5,8 +5,10 @@ div.lm_content {
 .content-heading {
     text-align: center;
     border-bottom: 1px solid #ccc;
-    padding-bottom: 0.5em;
+    padding-bottom: 0;
     margin-left: auto;
     margin-right: auto;
     width: 97%;
+    font-style: italic;
+
 }
