add focus wi-curve-listing

--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -125,10 +125,13 @@ wi-curve-listing{
         }
     }
     .nanValue{
-        background: steelblue;
+        background: indianred;
         input{
-            background: steelblue;
+            background: indianred;
         }
+    }
+    .focus{
+        background: steelblue;
     }
     .editor{
         border-width: 0;
