--- a/source/app/components/wi-curve-listing/wi-curve-listing.html
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.html
@@ -66,7 +66,7 @@
 			</div>
 			<div class="tbody">
 				<div ng-repeat="row in wiCurveListing.loaded track by $index" class="trow">
-					<div class="tcol">{{$index + wiCurveListing.first}}</div>
+					<div class="tcol" ng-class="{focus:$index == wiCurveListing.focus}">{{$index + wiCurveListing.first}}</div>
 					<div class="tcol depth">{{wiCurveListing.depthArr[wiCurveListing.currentIndex][$index + wiCurveListing.first]}}</div>
 				</div>
 			</div>
