move filter to wi-base-treeview

--- a/source/app/components/wi-explorer-treeview/wi-explorer-treeview.html
+++ b/source/app/components/wi-explorer-treeview/wi-explorer-treeview.html
@@ -1,8 +1,10 @@
 <wi-base-treeview
-	name={{wiExplorerTreeview.name}}
+	name='{{wiExplorerTreeview.name}}'
 	container='wiExplorerTreeview.container'
 	config='wiExplorerTreeview.config'
 	on-ready-function='wiExplorerTreeview.onReady'
 	on-click-function='wiExplorerTreeview.onClick'
-	show-context-menu-function='wiExplorerTreeview.showContextMenu'>
+	show-context-menu-function='wiExplorerTreeview.showContextMenu'
+	filter='{{wiExplorerTreeview.filter}}'
+	filter-by='{{wiExplorerTreeview.filterBy}}'>
 </wi-base-treeview>
