--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -636,3 +636,19 @@ input[type=checkbox].input-check {
 }
 //end import from inventory inentory dialog 
 .ui-select-toggle > .caret { pointer-events: none }
+
+.ui-select-small {
+	.ui-select-match .ui-select-toggle {
+		height: 20px;
+	}
+	.ui-select-search {
+		height: 20px;
+	}
+	.dropdown-menu {
+		min-width: 125px;
+		font-size: 11px;
+	}
+	.dropdown-menu::-webkit-scrollbar {
+		width: 5px;
+	}
+}
