fix resizeH css

--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -127,12 +127,13 @@ wi-curve-listing{
         .resizeH{
             position: absolute;
             top: 0px;
-            right: -4px;
-            width: 10px;
+            right: -10px;
+            width: 20px;
             height: 100%;
             border: none;
             background-color: transparent;
             cursor: col-resize;
+            z-index: 99;
         }
     }
     .nanValue{
