add save curve depthshift

--- a/source/app/components/wi-curve-listing/wi-curve-listing.less
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.less
@@ -100,6 +100,9 @@ wi-curve-listing{
         .rest-columns > .thead > .trow > .tcol {
             margin-left: -10px;
             margin-right: 10px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
         .rest-columns > .thead > .trow > :first-child{
             margin-left: 0;
