--- a/source/app/components/wi-inventory/wi-inventory.less
+++ b/source/app/components/wi-inventory/wi-inventory.less
@@ -1,7 +1,10 @@
 wi-inventory {
+    display:flex;
+    flex-direction: column;
+    background: #f4f4f4;
     .inventory-main {
-        background: #f4f4f4;
-        height: calc(~"100% - 41px");
+        flex: 1;
+        /*height: calc(~"100% - 41px");*/
         #left-inventory {
             overflow-y: auto;
             overflow-x: hidden;
