fix stack header control

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -88,6 +88,9 @@ body{
 .lm_header .lm_tab .lm_title{
     padding-top: 0;
 }
+.lm_controls {
+    display: inline-flex;
+}
 .lm_tabdropdown_list > .lm_tab{
     min-width: -webkit-fill-available;
     >.lm_title {
