--- a/source/less/wipm.less
+++ b/source/less/wipm.less
@@ -36,6 +36,7 @@
 }
 #right{
 	padding: 0px 40px 40px 40px;
+	overflow-y: auto;
 }
 .form-group.form-inline{
 	border-top: 1px solid #a8aab4;
@@ -90,3 +91,6 @@ table{
 	100% { transform: rotate(360deg); }
 	}
 	
+.form-inline .form-control{
+	width: 100%;
+}
