ui curve bulk update dialog

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -520,9 +520,9 @@ input[type="checkbox"] {
 	border: 1px solid #ccc;
 }
 .scrollTable {
-	thead, tbody {
+	/* thead, tbody {
 		display: block;
-	}
+	} */
 	tbody {
 		max-height: 9em;
 		overflow-y: overlay;
@@ -631,7 +631,7 @@ input[type=checkbox].input-check {
 }
 
 .modalScroll {
-	max-height: 40em;
+	max-height: 30em;
     overflow-y: overlay;
 }
 //end import from inventory inentory dialog 
@@ -651,4 +651,7 @@ input[type=checkbox].input-check {
 	.dropdown-menu::-webkit-scrollbar {
 		width: 5px;
 	}
+}
+.background-header-table {
+	background: #EBEDEF;
 }
