--- a/source/less/wipm.less
+++ b/source/less/wipm.less
@@ -45,8 +45,8 @@ thead, tbody{
 	display: block;
 }
 tbody {
-	max-height: 40rem;
-	overflow-y: overlay;
+	//max-height: 40rem;
+	overflow-y: auto;
 }
 tr {
 	display: table;
@@ -61,7 +61,7 @@ td{
 	text-align: center;
 	/* overflow-x: overlay; */
 }
-table{		
+.wipm-table{
 	background: #F2F2F2;
 	border: 1px solid #ccc;
 }
