--- a/source/app/components/wii-items/wii-items.html
+++ b/source/app/components/wii-items/wii-items.html
@@ -1,6 +1,6 @@
 <div  class="panel panel-default">
     <div class="panel-heading">
-        <h4>Items</h4>
+        <h4>Curves</h4>
     </div>
     <div class="panel-body">
         <table ng-if="wiiItems.items.length">
@@ -12,11 +12,11 @@
                 ng-click="wiiItems.onItemClick($index, $event);"
                 ng-class="{active: item.data.selected}"
                 wi-right-click="wiiItems.onItemClick($index, $event); wiiItems.showContextMenu($index, $event)">
-                <td class="curve-name width-95-percent">
+                <td style='width:67%;' class="curve-name">
                     <i class="curve-16x16"></i>
                     <input type="text" ng-model="item.properties.name" ng-change="item.changed = true" ng-blur="wiiItems.onChange(item)" wi-enter="wiiItems.onChange(item)">
                 </td>
-                <td class="unit">
+                <td style='width:33%;'>
                     <input type="text" ng-model="item.properties.unit" ng-change="item.changed = true" ng-blur="wiiItems.onChange(item)" wi-enter="wiiItems.onChange(item)">
                 </td>
             </tr>
