--- a/source/app/components/wi-inventory/wi-inventory.html
+++ b/source/app/components/wi-inventory/wi-inventory.html
@@ -25,8 +25,10 @@
             <span class="arrow-left-16x16"></span>
         </button>
     </div>
-    <div class="inventory-side">
-        <wi-inventory-treeview name="inventoryTreeview" config="wiInventory.inventoryConfig" container="wiInventory" selected-node="wiInventory.inventorySelectedNode"></wi-inventory-treeview>
+    <div style="display:flex;padding:0;" class="inventory-side">
+        <wi-scroll style='flex:1;display:flex;flex-direction:column;' up-trigger="wiInventory.upTrigger" down-trigger="wiInventory.downTrigger">
+            <wi-treeview name="inventoryTreeview" config="wiInventory.inventoryConfig" container="wiInventory" selected-node="wiInventory.inventorySelectedNode"></wi-treeview>
+        </wi-scroll>
     </div>
 </div>
 <div class="inventory-toolbar-wrapper">
