--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -5,7 +5,7 @@
     <div class="wi-parent-node" type="{{wiBaseTreeview.config[$index].type}}"
         ng-class='{"item-active": item.data.selected}'
         data="{{wiBaseTreeview.config[$index].id}}"
-        wi-right-click="wiBaseTreeview.onClick($index, $event); wiBaseTreeview.showContextMenuFunction($event, $index)"
+        wi-right-click="wiBaseTreeview.onClick($index, $event, item); wiBaseTreeview.showContextMenuFunction($event, $index)"
         wi-element-ready="wiBaseTreeview.onReadyFunction();"
         ng-hide="item.data.hide">
         <div class="wi-parent-content">
@@ -17,7 +17,7 @@
                         'fa-caret-right': !item.data.childExpanded,
                         'wi-hidden': item.children == null || item.children.length == 0}"></i>
             </div>
-            <div ng-click="wiBaseTreeview.onClick($index, $event)"
+            <div ng-click="wiBaseTreeview.onClick($index, $event, item)"
                 ng-dblclick="wiBaseTreeview.onDoubleClick($index);">
                 <div class="display-inline-block margin-right-0_5em"><span class="{{item.data.icon}}"></span></div>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentData">{{item.parentData.label}} /</span>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="wi-parent-unit" ng-show="item.data.unit"
-            ng-click="wiBaseTreeview.onClick($index, $event)"
+            ng-click="wiBaseTreeview.onClick($index, $event, item)"
             ng-dblclick="wiBaseTreeview.onDoubleClick($index)">
             <span class='display-inline-block' style='text-indent:10px;' title="{{item.data.unit}}">{{item.data.unit}}</span>
         </div>
